testdata/fixtures/audit/positive/sql_concat_template_js.js
function getUser(db, userId) {
  return db.execute(`SELECT * FROM users WHERE id = ${userId}`);
}
