testdata/fixtures/audit/negative/sql_concat_neg_placeholder_js.js
function getUser(db, userId) {
  return db.query("SELECT * FROM users WHERE id = ?", [userId]);
}
